<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Daily Expenses</string>
    <string name="btn_add_type">Add Type</string>
    <string name="txt_new_type_name">New Type Name</string>
    <string name="btn_new_type_cancel">Cancel</string>
    <string name="txt_amount">Amount</string>
    <string name="btn_save">Save</string>
    <string name="txt_todays_spend">Spent Today:</string>
    <string name="txt_todays_spend_value">0.00</string>
    <string name="txt_no_expenses">No records for selected date.</string>
    <string name="lbl_menu_edit">Edit Expenses</string>
    <string name="lbl_edit_type">Type</string>
    <string name="lbl_edit_amount">Amount</string>
    <string name="btn_save_edit">Update</string>
    <string name="lbl_edit_id">ID</string>
    <string name="lbl_menu_report">Reports</string>
    <string name="lbl_mi_dayof">Current Day</string>
    <string name="lbl_mi_weekof">Current Week</string>
    <string name="lbl_mi_yearof">Current Year</string>
    <string name="lbl_mi_spanof">Custom Date</string>
    <string name="lbl_mi_monthof">Current Month</string>
    <string name="lbl_mi_viewby">View By</string>
    <string name="lbl_report_choose_span">Choose Span of Days:</string>
    <string name="lbl_report_spanto"> to </string>
    <string name="lbl_report_filter">Use These Dates</string>
    <string name="lbl_edit_zeroout">Enter a value of "0.00" to remove this expense.</string>
    <string name="lbl_report_dates_inclusive">All dates represent an exclusive filter.</string>
    <string name="lbl_report_date_end">End Date</string>
    <string name="lbl_report_date_start">Start Date</string>
    <string name="btn_apply">Apply</string>
</resources>
