<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/trExpense"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/txtRowID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_edit_id"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtRowCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="9"
                android:text="@string/lbl_edit_type"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txtRowAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minEms="5"
                android:text="@string/lbl_edit_amount"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/txtRowDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtRowCurrency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtRowExchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>

</TableRow>